# sero

./: .dockerignore  .gitignore  Dockerfile  TASKS.md
backend/: .dockerignore  Dockerfile  ENDPOINTS.md  README.md  TASKS.md  config.py  dependencies.py  gemini_wrapper.py  main.py  pyproject.toml  requirements.txt
backend/api/: chronotype.py  gemini.py  main.py  quiz.py  user.py
backend/models/: REFERENCE.md  __init__.py  chronotype.py  gemini.py  quiz.py  user.py
backend/services/: __init__.py  gemini_wrapper.py
backend/tests/: conftest.py  mock_data.json  test_chronotypes.py  test_gemini.py  test_rl_predictions.py  test_users.py
frontend/: .env.example  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  postcss.js  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: 7f859_next_55c64c64._.js  7f859_next_55c64c64._.js.map  (+2 more)
frontend/.next/types/: routes.d.ts  validator.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: SettingsSidebar.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useChronotype.ts
frontend/src/lib/: chronotype.ts
(+233 files in other folders)
